@@ -39,7 +39,10 @@ struct text_attrib {
 	unsigned char *link;
 	unsigned char *target;
 	unsigned char *image;
+
+	/* Any entities in the title have already been decoded.  */
 	unsigned char *title;
+
 	struct form_control *form;
 
 	struct text_attrib_color color;
