@@ -47,6 +47,8 @@ Miscellaneous:
   supported UTF-8 as the dump charset.)
 * Really retry forever when connection.retries = 0.
 * minor bug 1113: Fix a small memory leak if a mailcap file is malformed.
+* minor bug 1114: Decode SGML entities and NCRs only once in link/@title
+  and other attributes.
 * enhancement: Session-specific options.  Any options changed with
   toggle-* actions no longer affect other tabs or other terminals.
 * Do not crash when document.browse.minimum_refresh_time = 0 and
